home section completed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/fb5ac14529.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -49,13 +50,15 @@
 
             </div>
 
-            <div class="desc">
+            <div class="section1">
 
                 <div>
-                    <h1> Hi, I'm <span>Adith</span> </h1>
-                    <h1> Web Developer</h1>
-                </div>
+                    <h1 class="hey">Hey, I'm <span class="name">Adith.</span></h1>
 
+                    <p class="dev">I'm a Front-End Developer.</p>
+                    <button class="button">More About Me</button>
+                    
+                </div>
             </div>
         </div>
         <section class="about">
@@ -110,22 +113,46 @@
                 </div>
             </div>
         </section>
-        <section class="projects">
-            <div class="project">
-                <h3>Rock Paper Scissor</h3>
-                <p>A game built with javascript.</p>
-                <img  class="pimg" src="./images/bgimg.jpg" alt="">
-                 </div>
-            <div class="project"><h3>Rock Paper Scissor</h3>
-                <p>A game built with javascript.</p>
-                <img   class="pimg"src="./images/bgimg.jpg" alt=""></div>
-            <div class="project"><h3>Rock Paper Scissor</h3>
-                <p>A game built with javascript.</p>
-                <img   class="pimg"src="./images/bgimg.jpg" alt=""></div>
-           
+        <section class="section3">
+            <h1>Projects</h1>
+            <div class="projects">
+                <div class="project">
+                    <h3>Rock Paper Scissor</h3>
+                    <p>A game built with javascript.</p>
+                    <img class="pimg" src="./images/bgimg.jpg" alt="">
+                </div>
+                <div class="project">
+                    <h3>Rock Paper Scissor</h3>
+                    <p>A game built with javascript.</p>
+                    <img class="pimg" src="./images/bgimg.jpg" alt="">
+                </div>
+                <div class="project">
+                    <h3>Rock Paper Scissor</h3>
+                    <p>A game built with javascript.</p>
+                    <img class="pimg" src="./images/bgimg.jpg" alt="">
+                </div>
+
+            </div>
         </section>
-        <section class="contact"></section>
-        <div class="footer"></div>
+        <section class="section4">
+            <h1>Connect Me</h1>
+            <div class="contact">
+
+                <div class="socialicons">
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <form class="form" action="">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Email">
+                    <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                    <button> Submit</button>
+
+                </form>
+            </div>
+        </section>
+        <div class="footer">Developed by @ adithtoms</div>
     </div>
 
 </body>
