home section completed

--- a/index.html
+++ b/index.html
@@ -15,66 +15,70 @@
 
 <body>
     <div class="main">
-        <div class="home">
-            <div class="header">
 
-                <div class="container">
-                    <div class="logopart">
-                        <a class="navbar-brand" href="#">
-                            <img class="logo"
-                                src="./images/atk-high-resolution-logo-color-on-transparent-background.png" alt="">
-                        </a>
+        <div class="header">
 
-                    </div>
-                    <div class="itempart">
+            <div class="logopart">
+                <a class="navbar-brand" href="#">
+                    <img class="logo" src="./images/atk-high-resolution-logo-color-on-transparent-background.png"
+                        alt="">
+                </a>
 
-                        <ul class="items">
-                            <li class="nav-item">
-                                <a class="nav-link active hover-underline-animation" aria-current="page"
-                                    href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link hover-underline-animation" href="#">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link hover-underline-animation" href="#">Projects</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link hover-underline-animation" href="#">Contact</a>
-                            </li>
+            </div>
+            <div class="itempart">
 
-                        </ul>
+                <ul class="items">
+                    <li class="nav-item">
+                        <a class="nav-link active hover-underline-animation" aria-current="page" href="#one">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hover-underline-animation" href="#two">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hover-underline-animation" href="#three">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hover-underline-animation" href="#four">Contact</a>
+                    </li>
 
-                    </div>
-                </div>
+                </ul>
 
             </div>
 
-            <div class="section1">
+
+        </div>
+        <div class="home">
+
+            <section class="section1" id="one">
 
                 <div>
                     <h1 class="hey">Hey, I'm <span class="name">Adith.</span></h1>
 
                     <p class="dev">I'm a Front-End Developer.</p>
                     <button class="button">More About Me</button>
-                    
+
                 </div>
-            </div>
+            </section>
         </div>
-        <section class="about">
+        <section class="section2"id="two">
             <h1>About <span>Me</span> </h1>
-            <div class="section2">
+            <div class="about">
                 <div class="text">
                     <p>Hi there! I'm a self-taught web developer. I enjoy transforming complex problems into simple and
                         intuitive solutions. I love to explore and learn new things. Currently, most of my endeavors are
-                        in JavaScript and React.js.
+                        in JavaScript and React.js.</p>
 
-                        Aside from that, I'm also an avid reader. When I'm not coding, you'll probably find me reading
-                        something on my Kindle or tinkering with my computer.
+                    <p>
+                        I have done quite a lot research,
+                        including teaching myself web development and its best practices, building several fun and
+                        exciting projects, and finding easy-to-understand solutions.
 
-                        As someone with a keen interest in tech and a knack for problem-solving, web development was an
+                    </p>
+                    <p>As someone with a keen interest in tech and a knack for problem-solving, web development was an
                         obvious path.</p>
+                        <p >Apart from that, I love being outside, reading, and watching movies.</p>
                 </div>
+                
                 <div class="skill">
                     <div class="sicon">
                         <i class="devicon-html5-plain-wordmark colored"></i>
@@ -113,7 +117,7 @@
                 </div>
             </div>
         </section>
-        <section class="section3">
+        <section class="section3" id="three">
             <h1>Projects</h1>
             <div class="projects">
                 <div class="project">
@@ -134,7 +138,7 @@
 
             </div>
         </section>
-        <section class="section4">
+        <section class="section4" id="four">
             <h1>Connect Me</h1>
             <div class="contact">
 
